--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,6 @@ a {
     list-style: none;
 }
 
-
-
 .advantages-list {
     margin: 0;
     padding: 0;
@@ -76,7 +74,6 @@ ul.site-navigation {
     display: flex;
     flex-wrap: wrap;
 
-    /* width: 1056px;                             /*УТОЧНИТЬ */
     margin: 0;
     margin-left: auto;
     margin-right: auto;
@@ -91,21 +88,16 @@ ul.site-navigation {
     padding-bottom: 16px;
 }
 
-.site-navigation li:nth-child(-n+2) {
+.left-navigation {
     text-align: left;
 }
 
-.site-navigation li:nth-child(n+3) {
+.right-navigation {
     text-align: right;
 }
 
-.site-navigation li:nth-child(3) {
+ .site-navigation li:nth-child(3) {
     margin-left: 96px;
-    /* padding-right: 8px; */
-}
-
-.site-navigation li:nth-child(2) {
-    /* padding-left: 3px; */
 }
 
 .main-header-logo {
@@ -113,6 +105,7 @@ ul.site-navigation {
     top: 0;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 5;
 }
 
 .site-navigation a {
@@ -135,7 +128,7 @@ ul.site-navigation {
 }
 
 .hero {
-    /* margin-bottom: -50px; */
+    position: relative;
 
     background: url(../img/polygon.png),
     url(../img/hero-mountains.jpg);
@@ -143,6 +136,19 @@ ul.site-navigation {
     background-position:
         0 100%,
         0 -56px;
+}
+
+.hero::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    width: 100%;
+    height: 58px;
+
+    background-image: url(../img/polygon.png);
 }
 
 .pic-welcome {
@@ -199,7 +205,7 @@ ul.site-navigation {
     text-align: center;
 }
 
-.advantages-item-special .advantages-number{
+.advantages-item-special .advantages-number {
     margin: 0;
     margin-top: 24px;
 }
@@ -212,13 +218,13 @@ ul.site-navigation {
 .city-background {
     background-image: url(../img/city.jpg);
     background-repeat: no-repeat;
-    background-position: 100% 0;
+    background-position: 100% 50%;
 }
 
 .mountains-background {
     background-image: url(../img/mountains.jpg);
     background-repeat: no-repeat;
-    background-position: 0 0;
+    background-position: 0 50%;
 }
 
 .mountains-background .text-wrapper {
@@ -251,9 +257,6 @@ ul.site-navigation {
     width: 76px;
     height: 72px;
     margin-bottom: 24px;
-    /* margin-top: 60px;
-
-    margin-left: 162px; */
 
     background-image: url(../img/icon-home.svg);
 }
@@ -262,8 +265,6 @@ ul.site-navigation {
     width: 76px;
     height: 72px;
     margin-bottom: 21px;
-    /* margin-top: 61px;
-    margin-left: 163px; */
 
     background-image: url(../img/icon-food.svg);
 }
@@ -272,12 +273,8 @@ ul.site-navigation {
     width: 64px;
     height: 76px;
     margin-bottom: 23px;
-    /* margin-top: 56px;
-
-    margin-left: 168px; */
 
     background-image: url(../img/icon-souvenir.svg);
-
 }
 
 .advantages-text,
@@ -301,9 +298,6 @@ ul.site-navigation {
 }
 
 .advantages-item-white.icon-home {
-    /* width: 400px; */
-    /* min-height: 183px; */
-    /* padding: 60px 55px; */
     padding-top: 60px;
     padding-bottom: 81px;
     padding-left: 72px;
@@ -380,9 +374,12 @@ ul.site-navigation {
 
 .hotels {
     position: relative;
-    min-height: 291px;
 
     background-color: #ffffff;
+}
+
+.filters + .hotels {
+    padding-top: 30px;
 }
 
 .hotels .text-wrapper {
@@ -398,7 +395,6 @@ ul.site-navigation {
 
 .hotels b {
     display: block;
-    /* padding-top: 50px; */
     margin-bottom: 24px;
 
     font-size: 30px;
@@ -409,12 +405,10 @@ ul.site-navigation {
 
 .hotels-info {
     margin: 0;
-    /* margin-bottom: 47px; */
 
     font-size: 14px;
     font-weight: 400px;
     line-height: 24px;
-    /* text-align: center; */
     color: #333333;
 }
 
@@ -453,6 +447,7 @@ ul.site-navigation {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 5;
 
     width: 568px;
     min-height: 395px;
@@ -486,10 +481,10 @@ ul.site-navigation {
 .adults-number-input,
 .children-number-input {
     padding: 0;
-    vertical-align: middle;
-    text-align: center;
 
     font: inherit;
+    vertical-align: middle;
+    text-align: center;
 }
 
 .hotel-search-button-minus {
@@ -507,7 +502,7 @@ ul.site-navigation {
 
 .hotel-search-button-plus::after,
 .hotel-search-button-plus::before,
-.hotel-search-button-minus::after{
+.hotel-search-button-minus::after {
     content: "";
 
     position: absolute;
@@ -548,16 +543,13 @@ ul.site-navigation {
     width: 460px;
     min-height: 38px;
     margin: 0;
-    /* margin-left: 55px; */
     padding-left: 55px;
     padding-right: 55px;
 }
 
 .arrival-date {
-    /* margin-top: 55px; */
     margin-bottom: 29px;
     padding-top: 55px;
-    /* padding-bottom: 29px; */
 }
 
 .arrival-date label {
@@ -573,7 +565,7 @@ ul.site-navigation {
 }
 
 a.button-hotels-search:hover,
-a.button-hotels-search:focus{
+a.button-hotels-search:focus {
     background-color: #604e43;
 }
 
@@ -650,7 +642,6 @@ a.button-hotels-search:active {
     width: 458px;
     min-height: 58px;
     padding: 0;
-    /* margin-bottom: 55px; */
     margin-left: auto;
     margin-right: auto;
 
@@ -662,10 +653,8 @@ a.button-hotels-search:active {
     background-color: #81b3d2;
 }
 
-
-
 button.hotel-search-button:hover,
-button.hotel-search-button:focus{
+button.hotel-search-button:focus {
     background-color: #669ec0;
 }
 
@@ -727,9 +716,10 @@ ul.social-list {
 }
 
 .social-button {
-     display: flex;
+    display: flex;
     align-items: center;
     justify-content: center;
+
     width: 46px;
     height: 48px;
     margin: 0 3px;
@@ -753,14 +743,12 @@ ul.social-list {
     padding-top: 39px;
     padding-bottom: 40px;
     padding-left: 102px;
-
 }
 
 .copyright-wrapper p {
     width: 74px;
     margin: 0;
     margin-right: 8px;
-
     padding-top: 10px;
 }
 
@@ -785,8 +773,7 @@ ul.social-list {
 }
 
 .filters {
-    min-height: 218px;
-    margin-bottom: 30px;
+    min-height: 217px;
 
     background-color: #4e7da5;
     background-image: url(../img/filters-background.jpg);
@@ -799,23 +786,19 @@ ul.social-list {
     padding: 0;
 }
 
-.filters-hotels-wrapper{
+.filters-hotels-wrapper {
     display: flex;
-
     padding-top: 27px;
 }
 
 .filter-infrastructure-wrapper {
     width: 240px;
-    /*
-    margin-top: 26px; */
     margin-left: 72px;
 }
 
 .filter-house-type-wrapper {
     width: 275px;
     margin-left: 15px;
-    /* margin-top: 30px; */
 }
 
 .filters fieldset {
@@ -858,7 +841,6 @@ ul.social-list {
     border: none;
 }
 
-
 .filters-input-checkbox:disabled + label::before {
     border-color: #6a6a6a;
     color: #ff0000;
@@ -866,6 +848,10 @@ ul.social-list {
 
 .filters-input-checkbox:checked:disabled + label::before {
     background-image: url(../img/checkbox-on-disabled.svg);
+}
+
+.filters-input-checkbox:focus +label:before {
+    border:1px solid #4D90FE;
 }
 
 .filters ul {
@@ -879,7 +865,7 @@ ul.social-list {
 }
 
 .filters-option {
-    margin-bottom: 25px;
+    margin-bottom: 24px;
 
     font-size: 14px;
     font-weight: 400;
@@ -892,17 +878,27 @@ ul.social-list {
 }
 
 .filters legend {
-    margin-bottom: 9px;
-
     font-size: 16px;
     font-weight: 700;
     line-height: 21px;
     color: #ffffff;
 }
 
+.filters-legend {
+    margin-bottom: 25px;
+}
+
 .hotel-price-wrapper {
     width: 320px;
     margin-left: 210px;
+}
+
+.filters-range-title {
+    margin-bottom: 9px;
+
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 21px;
 }
 
 .price-controls {
@@ -938,7 +934,6 @@ ul.social-list {
     font-weight: 700;
     line-height: 30px;
     color: #ffffff;
-    /* vertical-align: middle; */
 
      cursor: pointer;
 }
@@ -966,13 +961,11 @@ ul.social-list {
 
 .range-controls {
     position: relative;
-
     margin-bottom: 33px;
 }
 
 .range-controls .scale {
     height: 2px;
-
     background: rgba(255, 255, 255, 0.3);
 }
 
@@ -1006,19 +999,23 @@ ul.social-list {
 }
 
 .range-toggle:hover {
-    background: #1c4f80;
+    border-width: 9px;
 }
 
 .sorting {
     display: flex;
-    align-items: baseline;
-    margin-bottom: 30px;
+    align-items: center;
+
+    margin-bottom: 31px;
+    margin-left: 72px;
+    margin-right: 72px;
 
     background-color: #fefefe;
 }
 
 .btn-transparent {
     display: block;
+
     margin: 0 auto;
     padding: 6px 35px;
 
@@ -1035,7 +1032,6 @@ ul.social-list {
 
 .btn-transparent:hover {
     color: #000000;
-
     background: #ffffff;
 }
 
@@ -1064,20 +1060,19 @@ a.hotel-link:active {
 
 .sorting-wrapper {
     display: flex;
-    align-items: baseline;
-     width: 528px;  /* ПРОВЕРИТЬ */
-    margin-left: 72px;
+    align-items: center;
 }
 
 .sorting-list {
     display: flex;
+    flex-wrap: wrap;
     margin: 0;
-    margin-left: 38px;
+    margin-left: 40px;
     padding: 0;
 }
 
-.sorting-list li:nth-child(n+2) {
-    margin-left: 30px;
+ .sorting-list li:nth-child(n+2) {
+    margin-left: 34px;
 }
 
 .sorting .sorting-text {
@@ -1107,11 +1102,65 @@ a.sroting-link:focus {
     color: #81b3d2;
 }
 
+.active.sorting-link {
+    color: #81b3d2;
+    border: none;
+}
+
 a.sorting-link:active {
     color: #000000;
     border: none;
 }
 
+.sort-order-wrapper a {
+    font-size: 0;
+}
+
+.sort-order-link-ascending::before,
+.sort-order-link-descending::before {
+    content: "";
+
+    display: inline-block;
+
+    border: 10px solid #cacaca;
+    border-left-width: 5px;
+    border-right-width: 5px;
+    border-left-color: transparent;
+    border-right-color: transparent;
+}
+
+.sort-order-link-ascending::before {
+    margin-right: 10px;
+    border-top-width: 0;
+}
+
+.sort-order-link-descending::before {
+    border-bottom-width: 0;
+}
+
+.sort-order-link-ascending:hover::before,
+.sort-order-link-descending:hover::before,
+.sort-order-link-ascending:focus::before,
+.sort-order-link-descending:focus::before {
+    border-color: #231f20;
+    border-left-color: transparent;
+    border-right-color: transparent;
+    cursor: pointer;
+}
+
+.sort-order-link-ascending:active::before,
+.sort-order-link-descending:active::before {
+    border-color: #81b3d2;
+    border-left-color: transparent;
+    border-right-color: transparent;
+    cursor: pointer;
+}
+
+.sort-order-link-descending.active::before {
+    border-color: #81b3d2;
+    border-left-color: transparent;
+    border-right-color: transparent;
+}
 
 ul.hotels-list {
     margin: 0;
@@ -1134,30 +1183,47 @@ ul.hotels-list {
 .hotels-item-main-wrapper {
     display: flex;
     justify-content: space-between;
-    width: 1056px; /* Убрать свойство, Задать родительский блок с такой шириной и padding:  */
+
     min-height: 150px;
     margin: 0;
     margin-left: 72px;
+    padding: 30px 0;
 }
 
 .rating-wrapper {
     display: flex;
     flex-direction: column;
+
     width: 240px;
-    min-height: 90px;
 }
 
 .rating {
-    margin-bottom: 45px;
-    margin-top: 30px;
+    margin-bottom: 40px;
     text-align: right;
+}
+
+p.rating-number {
+    width: 110px;
+    margin: 0;
+    margin-left: auto;
+    padding: 6px 0px;
+
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    text-align: center;
+    color: #666666;
+
+    background-color: #f2f2f2;
+}
+
+.rating-stars img {
+    margin-left: 2px;
 }
 
 .hotels-item-wrapper {
     display: flex;
-    width: 528px;
-    min-height: 90px;
-    margin: 30px 0;
+    width: 423px;
 }
 
 .hotels-item-text-btns-wrapper {
@@ -1166,18 +1232,14 @@ ul.hotels-list {
     margin-left: 30px;
 }
 
-.hotels-item-btns-wrapper .button {
-    width: 110px;
-    min-height: 27px;
-}
-
 .hotels-item-wrapper h3,
 .hotels-item-wrapper p {
     margin:0;
 }
 
 .hotels-item-text-btns-wrapper h3 {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+    margin-top: -6px;
 
     font-size: 21px;
     font-weight: 700;
@@ -1187,11 +1249,13 @@ ul.hotels-list {
 
 .hotels-item-text-wrapper {
     display: flex;
+    justify-content: space-between;
+
     margin-bottom: 18px;
 }
 
 .hotels-item-text-wrapper .hotel-price {
-    margin-left: 35px;
+    margin-right: 78px;
 }
 
 .hotels-item p {
@@ -1202,15 +1266,30 @@ ul.hotels-list {
 }
 
 .hotels-list li {
-    width: 1200px;
+    min-height: 90px;
+    display: flex;
+    justify-content: space-between;
+
     margin-top: -1px;
-    min-height: 150px;
+    padding: 30px 72px;
 
     border-top: 1px solid #e5e5e5;
     border-bottom: 1px solid #e5e5e5;
 }
 
-a.button-info {
+.button-info,
+.button-booking {
+    display: inline-block;
+
+    margin-top: 1px;
+    padding: 3px 17px;
+
+    font-size: 0;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.button-info {
     font-size: 14px;
     font-weight: 700;
     line-height: 21px;
@@ -1219,16 +1298,16 @@ a.button-info {
     background-color: #81b3d2;
 }
 
-a.button-info:hover,
-a.button-info:focus {
+.button-info:hover,
+.button-info:focus {
     background-color: #669ec0;
 }
 
-a.button-info:active {
+.button-info:active {
     opacity: 0.3;
 }
 
-a.button-booking {
+.button-booking {
     color: #ffffff;
     font-size: 14px;
     font-weight: 700;
@@ -1237,26 +1316,11 @@ a.button-booking {
     background-color: #766357;
 }
 
-a.button-booking:hover,
-a.button-booking:focus {
+.button-booking:hover,
+.button-booking:focus {
     background-color: #604e43;
 }
 
-a.button-booking:active {
+.button-booking:active {
     opacity: 0.3;
-}
-
-p.rating-number {
-    width: 110px;
-    min-height: 27px;
-    margin: 0;
-    margin-left: 130px;
-
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
-    text-align: center;
-    color:666666;
-
-    background-color: #f2f2f2;
 }
