--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,9 @@ a {
 
     white-space: nowrap;
 
-    clip-path: inset(100%);
+    -webkit-clip-path: inset(100%);
+
+            clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
@@ -40,7 +42,8 @@ a {
     margin-right: auto;
 
     background-color: #ffffff;
-    box-shadow: 0 0 50px -10px #34495e;
+    -webkit-box-shadow: 0 0 50px -10px #34495e;
+            box-shadow: 0 0 50px -10px #34495e;
 }
 
 .main-navigation {
@@ -71,8 +74,11 @@ a {
 }
 
 ul.site-navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 
     margin: 0;
     margin-left: auto;
@@ -104,7 +110,9 @@ ul.site-navigation {
     position: absolute;
     top: 0;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
     z-index: 5;
 }
 
@@ -213,6 +221,7 @@ ul.site-navigation {
 .advantages-item-special .advantages-text {
     margin: 0px;
     margin-top: 21px;
+    padding: 0 46px;
 }
 
 .city-background {
@@ -293,7 +302,10 @@ ul.site-navigation {
 }
 
 .advantages-item-white {
+    width: 400px;
+
     text-align: center;
+
     background-color: #ffffff;
 }
 
@@ -366,8 +378,12 @@ ul.site-navigation {
 }
 
 .advantages-inner-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin: 0;
     padding: 0;
 }
@@ -423,6 +439,7 @@ ul.site-navigation {
     text-transform: uppercase;
 
     border: none;
+    cursor: pointer;
 }
 
 .button-hotels-search {
@@ -446,8 +463,12 @@ ul.site-navigation {
 .modal-hotels-search {
     position: absolute;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
     z-index: 5;
+
+    display: none;
 
     width: 568px;
     min-height: 395px;
@@ -462,10 +483,29 @@ ul.site-navigation {
     color: #000000;
 }
 
+.modal-show {
+    display: block;
+    animation-direction: normal;
+    -webkit-animation-name: emergence;
+
+            animation-name: emergence;
+    /* animation-name: bounce; */
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+}
+
 .hotels-search {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 .hotels-search .adults-number-input,
@@ -514,7 +554,9 @@ ul.site-navigation {
 }
 
 .hotel-search-button-plus::after {
-    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+            transform: rotate(90deg);
 }
 
  .adults-number + .hotel-search-button-minus::after {
@@ -553,7 +595,7 @@ ul.site-navigation {
 }
 
 .arrival-date label {
-    margin-right: 20px;
+    margin-right: 19px;
 }
 
 .departure-date label {
@@ -586,7 +628,8 @@ a.button-hotels-search:active {
 }
 
 .hotels-search .form-date-input {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 346px;
     min-height: 38px;
     padding: 6px 10px; /* верх/низ лево/право */
@@ -678,6 +721,8 @@ button.hotel-search-button:active {
 }
 
 .footer-content-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     min-height: 120px;
 }
@@ -703,10 +748,17 @@ button.hotel-search-button:active {
 }
 
 ul.social-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 
     width: 400px;
     margin: 0;
@@ -716,9 +768,15 @@ ul.social-list {
 }
 
 .social-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 
     width: 46px;
     height: 48px;
@@ -738,6 +796,8 @@ ul.social-list {
 }
 
 .copyright-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 
     padding-top: 39px;
@@ -787,6 +847,8 @@ ul.social-list {
 }
 
 .filters-hotels-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding-top: 27px;
 }
@@ -811,7 +873,10 @@ ul.social-list {
     display: block;
 
     cursor: pointer;
-    user-select: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
 }
 
 .filters-input-checkbox + label::before {
@@ -924,7 +989,9 @@ ul.social-list {
     height: 22px;
 
     background: #ffffff;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
 }
 
 .price-controls label {
@@ -986,7 +1053,8 @@ ul.social-list {
     background: #ababab;
     border: 8px solid #ffffff;
     border-radius: 50%;
-    box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+    -webkit-box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+            box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
     cursor: pointer;
 }
 
@@ -1003,8 +1071,12 @@ ul.social-list {
 }
 
 .sorting {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 
     margin-bottom: 31px;
     margin-left: 72px;
@@ -1036,7 +1108,9 @@ ul.social-list {
 }
 
 .sort-order-wrapper {
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
     text-align: right;
 }
 
@@ -1059,13 +1133,22 @@ a.hotel-link:active {
 }
 
 .sorting-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .sorting-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+
+    width: 735px;
     margin: 0;
     margin-left: 40px;
     padding: 0;
@@ -1181,8 +1264,12 @@ ul.hotels-list {
 }
 
 .hotels-item-main-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 
     min-height: 150px;
     margin: 0;
@@ -1191,8 +1278,13 @@ ul.hotels-list {
 }
 
 .rating-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 
     width: 240px;
 }
@@ -1222,13 +1314,20 @@ p.rating-number {
 }
 
 .hotels-item-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 423px;
 }
 
 .hotels-item-text-btns-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-left: 30px;
 }
 
@@ -1248,8 +1347,12 @@ p.rating-number {
 }
 
 .hotels-item-text-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 
     margin-bottom: 18px;
 }
@@ -1267,8 +1370,12 @@ p.rating-number {
 
 .hotels-list li {
     min-height: 90px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 
     margin-top: -1px;
     padding: 30px 72px;
@@ -1323,4 +1430,34 @@ p.rating-number {
 
 .button-booking:active {
     opacity: 0.3;
+}
+
+@-webkit-keyframes emergence {
+    0% {opacity: 0;}
+    100% { opacity: 1;}
+}
+
+@keyframes emergence {
+    0% {opacity: 0;}
+    100% { opacity: 1;}
+}
+
+@-webkit-keyframes bounce {
+    0% {-webkit-transform: translateY(-2000px);transform: translateY(-2000px);}
+
+  70% {-webkit-transform: translateY(30px);transform: translateY(30px);}
+
+  90% {-webkit-transform: translateY(-10px);transform: translateY(-10px);}
+
+  100% {-webkit-transform: translateY(0);transform: translateY(0);}
+}
+
+@keyframes bounce {
+    0% {-webkit-transform: translateY(-2000px);transform: translateY(-2000px);}
+
+  70% {-webkit-transform: translateY(30px);transform: translateY(30px);}
+
+  90% {-webkit-transform: translateY(-10px);transform: translateY(-10px);}
+
+  100% {-webkit-transform: translateY(0);transform: translateY(0);}
 }
